<?xml version="1.0"?>
<package format="2">
  <name>pybullet_ros</name>
  <version>0.0.0</version>
  <description>The pybullet_ros package</description>
  <maintainer email="dominic.reber@epfl.ch">Dominic Reber</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>franka_panda_description</depend>
</package>
