<?xml version="1.0"?>
<package format="3">
    <name>pybullet_ros2</name>
    <version>0.0.0</version>
    <description>ROS2 wrapper for PyBullet simulation</description>

    <license>TODO</license>

    <author email="dominic@aica.tech">Dominic Reber</author>
    <maintainer email="dominic@aica.tech">Dominic Reber</maintainer>

    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>franka_panda_description</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
